// Copyright 2020 WeDPR Lab Project Authors. Licensed under Apache-2.0.

syntax = "proto3";

package com.webank.wedpr.crypto.proto;
option java_package = "com.webank.wedpr.crypto.proto";
option java_multiple_files = true;

// Public key pair
message Keypair {
    string public_key = 1;
    string private_key = 2;
}